crates/analyzer/tests/snapshots/errors__return_complex_struct.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: feature not yet implemented: structs with complex fields can't be returned from public functions yet
  ┌─ compile_errors/return_complex_struct.fe:5:17
  │
5 │   pub fn f() -> Foo:
  │                 ^^^ not yet implemented


